--- a/variable extension/styles.css
+++ b/variable extension/styles.css
@@ -39,6 +39,13 @@ input[type="checkbox"]:hover {
   cursor: pointer;
 }
 
+input[type="checkbox"] {
+  width: 16px;
+  height: 16px;
+  accent-color: #09e8f5;
+}
+
+
 
 
 
