--- a/variable extension/styles.css
+++ b/variable extension/styles.css
@@ -84,6 +84,22 @@ span {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+img {
+  height: 20px;  width: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  position: relative;
+  top: 2px;
+  cursor: pointer;
+}
+
+td:nth-child(2){
+  width: 50px
+}
+
+
+
+
 
 
 
